--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,133 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/0iYXyzG.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>november . 29 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiiii fluffies <img src="https://i.imgur.com/sEpu4xD.gif"/><br>
+i have great news for you : i decided that i will learn how to sew clothes, like my mom !!<br>
+yes, i really want to improve my seamstress skills now.<br>
+i decided this when thinking about the topic of fashion and how i love designing my own clothes.. and i don't really know how to sew clothes.<br>
+i don't want to depend on my mom forever to sew my clothes and put ideas into practice, so i've decided that i will learn seriously !<br>
+i'll start with simple clothes for myself, but as soon as i become more confident i plan to sew things to my store as well <img src="https://i.imgur.com/86tN3lf.gif"/><br>
+yes, you will see exclusive clothes and bags at the shy bunny store in the near future ♡ !!!<br>
+i'm really excited for this, i know it will be a big improvement for me <img src="https://i.imgur.com/uqX9qnQ.gif"/><br>
+my mom is encouraging me a lot and will teach me all the techniques !<br>
+it's time to overcome the apprehension with sewing machines... wish me luck ♡<br>
+<br>
+well, i'd like to make a little break in this post for kefir appreciation !!!<br>
+( i don't know how to call them, but i mean the living things that make natural yogurt )<br>
+i've been creating kefir for a few months now, and i like them so much <img src="https://i.imgur.com/y5Kfd1j.gif"/><br>
+they are like fluffy clouds, and although they consume lots of milk, they always provide me yummy high quality yogurt for me to drink every morning ♡<br>
+if you have the opportunity to create a cute cloud colony too, i really recommend.<br>
+<br>
+so, after that random break.. i have here a colorful, nostalgic and super cute collage !!<br>
+<br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/VmuqaVF.png"/></center>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://mega.nz/#!YtYQBCSa!2Gr7cchulg-k7ftZ6tQmVWV76GswvJKJ6vQYYWVIawQ" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">happy dreams html .rar</font></a>　</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i'm in love with this aesthetic, it makes me so happy just to look at <img src="https://i.imgur.com/Oiknkmr.gif"/><br>
+i've been really interested in it lately.<br>
+this is the melody i used :<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/917o3w.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">shooting star .mp3</font></a>　
+</center>
+</font></font></font>
+
+<br>
+<font size = 1><font color="#B1A69E">
+<br><br>
+it's like little stars twinkling ♡<br>
+by the way, i recently won a little twin stars line theme that perfectly matches this aesthetic !!<br>
+in fact, it was a great inspiration for me to make this collage...<br>
+<br><br>
+<center><video width="250" height="auto" controls>
+<source src="https://files.catbox.moe/0o6qab.webm" type="video/webm">
+</video></center><br><br>
+</font></font></font>
+
+<br>
+<font size = 1><font color="#B1A69E">
+<br><br>
+... as well as these adorable dreamin' tiny pets stickers !<br>
+( i even used one in the little corner there )<br>
+<br>
+today i also have here a new remix for the moeP project.<br>
+it's something simple, but i liked it ///<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/0ze0ym.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">let's just... ♡ .mp3</font></a>　
+</center>
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+very very tsundere <img src="https://i.imgur.com/vkAKfla.gif"/><br>
+<br>
+nooow, of course, double q&a !<br>
+i wrote very positive and motivating texts this time, the first one is about a positive world view, the second one is about self care.<br>
+i wonder if these motivational texts actually help in any way and are not just "temporary positive energy"<br>
+i struggle to follow my own advice, if you want to know... it's easy to cry a lot and get mad at everything and everyone <img src="https://i.imgur.com/KWSo2mh.gif"/><br>
+but the important thing is to take a deep breath and think before you act not to hurt yourself or other people !<br>
+things will not be always easy or positive, right ?<br>
+<br><br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br><br>
+　☾ ⅰ<br>
+i want to urgently vent on this, it's so tiring to see people being bitter and negative, i just wanted to say : the world is not ugly.<br>
+the world is not a bad place, people are not horrible, life is not sad and tragic, no no no !!!<br>
+to begin with, the world is simply neutral. nature works in an extremely balanced way, everything is always in its proper place + bad and good things are equally necessary for everything to work well. it's impossible for a world to be good if only good things exist, i know it's confusing, but good and evil only exist if both exist. and this is something positive !<br>
+good experiences are better after bad moments of perseverance to achieve them. dreams are only dreams because they can't be realized right away. the fact that there are bad things and difficulties should be something that motivates you and makes the world interesting and beautiful, not the other way around ; ;<br>
+moreover, beauty is something very abstract in general. the world is not really ugly or beautiful, it's neutral because beauty depends on the eyes of the beholder. for example, you may very much like to eat a dish that looks disgusting but has a divine flavor. the "beauty" as we know is something visual, not that it's wrong, since i myself am an extremely visual person and always use this love for beauty to find out more about myself and the world, beautiful things make me feel happy and motivated, i love beauty ; but this is not so important in the world in general.<br>
+our sight is something sensitive and if you miss it, it's not as if all the beauty is gone. even if beauty is mostly visual, there is a lot more involved in this concept than we should consider as well. good things are always present in our lives : smells, tastes, sounds, textures... all this is as important as the visual. the beauty is in all this, so it is impossible not to have beauty in all things, no matter how "ugly" it may seem.<br>
+the world, life, nature, being perfectly neutral, allow us to take our paths and interpret things as we wish. i consider it healthy enough to be positive and see the usefulness and necessity of bad things as a motivational and educational way, and see good things as blessings to be enjoyed to the fullest, cherished and treasured as nostalgias. i consider the world a perfectly beautiful place because i want to be happy. like, why would i see the bad side of everything on purpose ? this doesn't make sense to me.<br>
+my desire is to mature enough to be happy and find beauty and importance in all sorts of things. it's not just a romanticization, it's a way of being able to enjoy life in a healthy and light way, to stay bright and pure no matter what bad experiences you have experienced.<br>
+the world is neutral but i consider it the most beautiful thing possible because it is purely perfect exactly as it is. ♡<br>
+<br>
+to complete this subject, i think people are also very negative when they talk about their bodies... and i'm not even talking about visual insecurities about it, but people really underestimate their bodies. our physical body is not just a bunch of flesh and by chance we're stuck inside it, it makes me sad when people talk like that, it's so disrespectful ; ;<br>
+our physical body is much more than just where we live, it's an organism. our organism. and even being ours, we control almost nothing about it, have you ever thought of it ? our body digests food all by itself, our body absorbs the vitamins from sunlight all by itself, our body keeps the temperature stable by all by itself, our body heals bruises all by itself !!! this is so wonderful, our body does everything possible to keep us healthy, not just physically, but emotionally as well. our body even offers endorphins to make us feel rewarded when we have good attitudes and everything ( and these genuinely make us happy ). even if you have a terminal illness, your body will never give up trying to heal you, it will try to keep you as healthy as possible until the last second ! i know it's all instinctive and natural, not really an act of voluntary goodness ; but it's still positive, isn't it ♡ ?<br>
+i honestly feel my heart ache when i see people treating their bodies badly... our bodies are so good to us. yes, it fails sometimes, i myself have several skin allergies and for a long time blamed my body for it. my skin is too sensitive and has exaggerated and bad reactions to deal with things it doesn't approve of, but my skin is not conscious. it doesn't know that it's exaggerating, but it still does a great job and keeps me generally very healthy, so it would be unfair not to like it just because it's too sensitive ///<br>
+besides our body always doing its best to keep us safe, healthy and satisfied, it is an important part of nature. our body is much larger than we think, there are infinite other tiny living beings that live in our body! our body is not only good for us as it is for other living beings, and it protects all this "small" ecosystem of living things that is harmful and damages our balance.<br>
+it is very important that we take care of our physical body in the best possible way : eat properly, use your muscles, get enough sleep, drink water.. whatever you can do, because it is not only a container for your soul, but a part of nature. being organic can have disadvantages, but being part of nature and being such a complex organism is definitely very rewarding and an experience that we should value ♡ !!!<br>
+<br>
+<br>
+<br>
+　☽ ⅱ<br>
+i've seen a lot of "self care" content lately, which is pretty good, but some of them are a very confusing or materialistic. i support all sorts of naturally healthy and satisfying tips for our relaxation and well-being ; but some tips are simply toxic, for they force us to do things and be in situations that might do us more harm than good ; ;<br>
+i've been feeling kinda sad over the last few days because i've discovered some bad things about people i had not noticed before.. i'm very happy, i'm satisfied with my life, i enjoy every day to the fullest and i try to observe the details and enjoy my time. i have routines and rules to follow that i consider healthy and i feel happy to follow because they bring me good things. i always try to be authentic and sincere, i don't like to pretend or seek approval from other people, i don't do anything that doesn't bring me joy and satisfaction. i give my best to help others in everything i can, and above all, to be happy. and i am happy. i have several life goals, but i'm happy at the moment too, because i live completely and honestly. i believe that i take good care of myself, since i feel happy, right ?<br>
+but i realized that people who are following standards for their lives, who are not honest with themselves, who seek happiness just in the future, in objects, in appearance, in relationships... people who are not happy, they can't accept that some people can be happy. truly happy. i realized that some people think i'm "weird" and antisocial, maybe even depressive, because i don't have a very active social life, because i don't maintain relationships with people who are toxic, because i don't force myself to do things that make me sad. i felt sad about it because i realized that it is impossible to "prove" to people that i really am happy and that i could even try to help them to be happier, too. they just don't believe me. they just keep "caring" about me and trying to help me ( ????? )<br>
+so after reading about these attitudes i was able to learn something crucial about self care : do nothing that is not comfortable for you.<br>
+i know that sometimes we need to make efforts to achieve our goals, but don't push yourself beyond the limit. if something you do is sincerely making you sad and making your life bad, don't do it.<br>
+it's hard because people are going to think bad things about you, especially if for being happy you need to isolate yourself a bit socially. i'm a very introverted person so for me it is sincerely very uncomfortable being in some situations, and i don't put myself into them, i refuse. i'm honest and i just hope people will respect me, but people don't respect that kind of choice because they think we have to constantly fight against ourselves to fit patterns and thus be happy.<br>
+a good example : your dream of full happiness is to live on a farm completely isolated from society. you accomplish this dream and you are more fully happy than you have ever been before !! people should be happy for you, right ? in fact, they will always tend to feel sorry for you and think that you are isolating yourself, depressingly. this is because they can't imagine themselves in the same situation as you as something good, it's not like they're being purposely inconvenient, they just don't understand. and that's why some self care tips are not always good or work for everyone ; everyone's happiness is found in different ways. we must respect this !<br>
+you will never be happy if you force yourself to do things that make you sad, if you keep on seeking incessantly for happiness, molding yourself to be the "rich", "healthy", "successful", "beautiful", "friendly" people think you need to be ; this is not how life works. there's no way you can fit into all these molds, it's an unobtainable ideal. being happy and taking good care of yourself is much simpler than it seems, it just involves being yourself and doing what you love ♡<br>
+fill your life with things that make you smile, that make you feel healthy and full. fill your life and your mind with your purity, your essence, you can be happy just being full. that is perfection. there is no better self care than being happy now and with what you have : you will be a much better, secure, kinder, wiser person ; you will be better for yourself and for others !!!<br>
+i know it may seem a bit vague, but it's just that : don't take self care tips "for your own good", even if it comes from people you love, if those tips don't make you happy. it's just not good or right.<br>
+<br><br>
+take care ♡<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/lnxsbCG.gif"/><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/0iYXyzG.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/9f0txaj.gif"/><img src="https://i.imgur.com/9f0txaj.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
