--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+　01/24 <img src="https://i.imgur.com/y9S1bJ8.gif"> edit on: <font color="#DFB7B7">faq</font><br>
+　01/24 <img src="https://i.imgur.com/y9S1bJ8.gif"> links on: <font color="#DFB7B7">links page</font><br>
 　01/22 <img src="https://i.imgur.com/y9S1bJ8.gif"> games on: <font color="#DFB7B7">gaming page</font><br>
 　01/22 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 　01/11 <img src="https://i.imgur.com/y9S1bJ8.gif"> games on: <font color="#DFB7B7">gaming page</font><br>
 　01/11 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 　01/11 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 　01/03 <img src="https://i.imgur.com/y9S1bJ8.gif"> games on: <font color="#DFB7B7">gaming page</font><br>
-　01/03 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
-　12/20 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 </div></center>
 
 <br>
@@ -363,7 +363,7 @@ position: relative;
     border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="https://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
 <br><br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2019 . january . 22</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2019 . january . 24</font></font></font>
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a href="https://shybunny.middlepot.com" target="_blank"><font color="#cc7a7a" style="padding-bottom: 2px; border-bottom:1px dashed #d8c0ad;"> visite minha lojinha </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br><br><br>
