--- a/links.html
+++ b/links.html
@@ -369,7 +369,7 @@ position: relative;
 <font color="#dc9a9a9">
 <sub><img src="https://i.imgur.com/z7SrWRK.gif"></sub> active accs :<br></font>
 <br>
-<font color="#7a6b6b">tumblr </font><a id="actv" title="main blog" href="https://dulci-chu.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://potix-u.my.to" target="_blank" >♡</a><br>
+<font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://dulci-chu.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://potix-u.my.to" target="_blank" >♡</a><br>
 <font color="#7a6b6b">fb </font><a id="actv" title="main page" href="https://www.facebook.com/potatoeswithshoes" target="_blank" >♡</a> <a id="actv" title="+16 page" href="https://www.facebook.com/potatoeswithsocks" target="_blank" >♡</a> <a id="actv" title="artsy page" href="https://www.facebook.com/liquidmilkycat" target="_blank" >♡</a><br>
 <font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
 <font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
@@ -382,10 +382,10 @@ if you have any questions about an account, please don't hesitate to contact me 
 <sub><img src="https://i.imgur.com/aUS9leF.gif"></sub><font color="#948181"><i> letters@middlepot.com</i></font></font></center>
 <br><br><br><br>
 
-<sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> inactive accs :</font><br>
+<sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only accs :</font><br>
 <br>
-<font color="#7a6b6b">fb </font><a id="inactv" title="profile" href="https://www.facebook.com/marjorinethatsme" target="_blank" >ഒ</a><br>
-<font color="#7a6b6b">ig </font><a id="inactv" title="profile" href="https://www.instagram.com/mid.pot" target="_blank" >ഒ</a><br>
+<font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/YNnQqND" target="_blank" >ഒ</a><br>
+<font color="#7a6b6b">ig </font><a id="inactv" title="spam acc" href="https://www.instagram.com/soffftie" target="_blank" >ഒ</a><br>
 <br><br><br>
 
 </div>
