--- a/links.html
+++ b/links.html
@@ -384,7 +384,7 @@ if you have any questions about an account, please don't hesitate to contact me 
 
 <sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only accs :</font><br>
 <br>
-<font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/QxY5Nrv" target="_blank" >ഒ</a><br>
+<font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >ഒ</a><br>
 <font color="#7a6b6b">ig </font><a id="inactv" title="spam acc" href="https://www.instagram.com/soffftie" target="_blank" >ഒ</a><br>
 <br><br><br>
 
