--- a/links.html
+++ b/links.html
@@ -369,8 +369,8 @@ position: relative;
 <font color="#dc9a9a9">
 <sub><img src="https://i.imgur.com/z7SrWRK.gif"></sub> active accs :<br></font>
 <br>
-<font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://dulci-chu.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://potix-u.my.to" target="_blank" >♡</a><br>
-<font color="#7a6b6b">fb </font><a id="actv" title="main page" href="https://www.facebook.com/potatoeswithshoes" target="_blank" >♡</a> <a id="actv" title="+16 page" href="https://www.facebook.com/potatoeswithsocks" target="_blank" >♡</a> <a id="actv" title="artsy page" href="https://www.facebook.com/liquidmilkycat" target="_blank" >♡</a><br>
+<font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
+<font color="#7a6b6b">tt </font><a id="actv" title="aes acc" href="https://twitter.com/sofffti" target="_blank" >♡</a><br>
 <font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
 <font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
 </div>
