--- a/not-bad.html
+++ b/not-bad.html
@@ -460,23 +460,17 @@ function getPosition(el) {
 <sub><sub><img src="https://i.imgur.com/ReolART.gif"/></sub></sub>　<font color="#a59881">not bad</font>　<sub><sub><img src="https://i.imgur.com/ReolART.gif"/></sub></sub>
 <br><br><br></center>
 <font style="font-size: 8px;" color="#b7aa92">
-this is a project i did together with a friend who motivated me saying it would work, and she was really sure ! thanks to all of you who support me so much. i continued the project by myself in a few months, since she had no time to post and we were not in harmony with the aesthetics and opinions.<br>
-the main page exists to make people feel happy with a nostalgic, cute and comfy aesthetic, every day ♡ !!<br>
-but when the page started, it had a very different goal : sexual freedom. actually, i always prefer to say "sexual balance", because sexual freedom is often interpreted as "never suppressing desires", but it is not healthy to simply obey all your desires as much as to suppress them completely... well, this is quite controversial and has several interpretations ( i'd like to make it clear that i'm not supporting infantilization, any kind of prostitution or unhealthy casual sex ), in this case, the sexual freedom that i'm talking about is specifically to refer to me and lots of girls who like to use cute lingerie, but there is a big problem : girls can only have sexuality if they have a mature style. if you don't have a very mature look and like cute and pink lingerie people say you are "impure" or even are supporting the sexual infantilization of girls... ????<br>
-purity and sexuality are completely different things to begin with ( i have it explained better <a href="https://middlepot.com/faq#sexuality" target="_blank"><font color="#d1adad">here</font></a> ), and there's nothing wrong with liking cute lingerie and wanting to be adorable ! adult girls can be feminine and delicate, and have sexuality. it's natural and healthy ! however, there was always a problem : this message was often confused with support for child sexuality, something i am completely against !! so i stopped posting pictures of girls who might look childish ( even if they were adults ). i started to have a bigger job choosing the pictures, since i should confirm their sources ( to make sure they were adults ), hide the girls' faces to anonymize them, and delete creepy comments.<br>
-but children were still visiting the page, since i also posted pictures of cuddly animals and other relaxing and cute stuff. i was attracting an audience that i didn't look for : creepy men ( even blocking them, new ones always appear, it's inevitable ) i was putting these underage in danger. i was being reported ( which made sense ) so i decided to create a new page, +16, and then finally post lovely cute lingerie.<br>
-in the main page, i keep a relaxing and cute environment with positive posts + my aesthetic. so the two pages became different, but the project is the same anyway, and i've received good feedback !<br>
-my tumblr also have the same goals and aesthetic of the main page: comfy, safe and relaxing.</font>
+this is a project i started together with a friend who motivated me saying it would be a "not bad" idea, and she was really sure ! thanks to all of you who support me so much. i continued the project by myself in a few months, since she had no time to post and we were not in harmony with the aesthetics and opinions.<br>
+this project exists to make people feel happy with a nostalgic, cute and comfy aesthetic ♡ !!<br>
+i try to keep a relaxing and safe environment with positive posts + my aesthetic.<br>
+this project started with facebook pages, where i was reposting content from tumblr. currently, i no longer use facebook and i continue with the project on twitter, where i also frequently repost content from tumblr, with sources.<br>
+besides images, videos and texts with a comfy and cuddly theme, i also like to use my twitter acc to promote art that inspires me and disclose my work !</font>
 <br>
 <br><br><br>
 
 <center>
-<sub><sub><img src="https://i.imgur.com/WbqAkc9.gif"/></sub></sub>　<a href="https://www.facebook.com/potatoeswithshoes" target="_blank"><font color="#a59881">main page</font></a><br>
-<sub><sub><img src="https://i.imgur.com/NLDjDGc.gif"/></sub></sub>　<a href="https://www.facebook.com/potatoeswithsocks" target="_blank"><font color="#a59881">+16 page</font></a>
-<br>
-<br><br>
-<sub><sub><img src="https://i.imgur.com/tLmNJIp.gif"/></sub></sub>　<a href="https://www.facebook.com/liquidmilkycat" target="_blank"><font color="#d1adad">artsy page</font></a><br><br>
-<font color="#e0c3c3">　　( i post art that inspire me )</font>
+<sub><sub><img src="https://i.imgur.com/WbqAkc9.gif"/></sub></sub>　<a href="https://twitter.com/sofffti" target="_blank"><font color="#a59881">twitter acc</font></a><br>
+<sub><sub><img src="https://i.imgur.com/NLDjDGc.gif"/></sub></sub>　<a href="https://pufti.my.to" target="_blank"><font color="#a59881">tumblr blog</font></a>
 <br>
 <br><br><br>
 </center>
@@ -484,12 +478,12 @@ my tumblr also have the same goals and aesthetic of the main page: comfy, safe a
 　　　<font color="#918181">mini gallery :</font>
 <br><br><br>
 <center>
-<img height="auto" width="400" src="https://i.imgur.com/ufsTtcC.png"/>
+<img height="auto" width="500" src="https://i.imgur.com/0ofKWfp.jpg"/>
 </center>
 <br><br><br>
 
 <font color="#c1aeae">
-<font size="2">※ </font>i don't usually put credits unless it's specified and i'm sure the person owns the photo / video. unfortunately, fake sources are very common. i usually get the images from tumblr, pinterest and we heart it, so they can be easily found by reverse search !
+<font size="2">※ </font>this gallery corresponds to my tumblr archive of 2018 august. the sources are in the posts, in the blog.
 </font>
 
 
