--- a/links.html
+++ b/links.html
@@ -371,6 +371,7 @@ position: relative;
 <br>
 <font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
 <font color="#7a6b6b">tt </font><a id="actv" title="aes acc" href="https://twitter.com/sofffti" target="_blank" >♡</a><br>
+<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
 <font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/batatinhamiddlepot" target="_blank" >♡</a><br>
 <font color="#7a6b6b">ywot </font><a id="actv" title="world" href="https://www.yourworldoftext.com/~mimipot/comfymilk" target="_blank" >♡</a><br>
 </div>
@@ -382,10 +383,9 @@ if you have any questions about an account, please don't hesitate to contact me 
 <sub><img src="https://i.imgur.com/aUS9leF.gif"></sub><font color="#948181"><i> letters@middlepot.com</i></font></font></center>
 <br><br><br><br>
 
-<sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only accs :</font><br>
+<sub><img src="https://i.imgur.com/lT3wh5L.gif"></sub><font color="#a5afb7"> friends only acc :</font><br>
 <br>
 <font color="#7a6b6b">dscrd </font><a id="inactv" title="add server" href="https://discord.gg/Wq5NhFm" target="_blank" >ഒ</a><br>
-<font color="#7a6b6b">ig </font><a id="inactv" title="spam acc" href="https://www.instagram.com/soffftie" target="_blank" >ഒ</a><br>
 <br><br><br>
 
 </div>
