--- a/faq.html
+++ b/faq.html
@@ -644,7 +644,7 @@ i know it is important, but i don't feel comfortable posting opinions on subject
 
 <a name="internet" id="internet"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　how was my past on the internet ?</font><br><br><br>
-<font color="#d8b9af">　( october . 21 . 2017 )</font>
+<font color="#d8b9af">　( october . 21 . 2017 + february . 04 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
 what did i do on the internet before starting the projects and this website ?<br>
@@ -705,13 +705,15 @@ over time, the internet has been changing ... the blogs became unpopular, forums
 i then looked for substitutes for the things i liked : i tried using facebook to replace orkut, but no one else cared about the glittery cute things and i was disappointed.<br>
 i started using tumblr, which was well customizable and could fill the void that blogs left behind. it worked, even if it took a long time to find an aesthetic that would make me really happy, so i did several blogs until i got to my recent one ( it was during this time that i created the name middlepot ).<br>
 my recent one, was done together with a friend of mine, who also made with me the not bad fb page, which should have the same aesthetics. but she and i had very different opinions of what we wanted to do and she'd post things that i didn't like, both on the tumblr and on the page ... it became a mess, and we ended up giving up doing it together. i'd like to talk more about it in another post, because it's a tricky subject ; ;<br>
-anyway, i deleted her posts from tumblr and facebook, and then i got to what it is today : a safe and comfy place !<br>
-the fb pages have similar content, which i get on tumblr. in this way, fb pages are extensions of my main tumblr, a way to bring content to people who don't know it.<br>
-fb itself, i did not like to use as a social media. i also tried using instagram, but bad things happened and i gave up on it too. i'm used to the more open and customizable format the old internet had, so the tumblr was the place where i most adapted.<br>
+anyway, i deleted her posts from tumblr and facebook, and then i got to my actual project : a safe and comfy place !<br>
+the fb pages had this content, from tumblr ; but i no longer use fb and decided to continue the project on twitter, an extension of my main tumblr, a way to bring content to people who don't know it.<br>
+i also tried using instagram, and now i finally am happy about it because i started using my acc to promote self care and share tips and cute games with people.<br>
+i don't use any social media in a very personal way, because i'm used to the more open and customizable format the old internet had. tumblr was the place where i most adapted, but i still don't use it to post very personal content.<br>
 to replace the forums, i found other places on the internet where i could communicate with various types of people, where i always remain anonymous as usual.<br>
 to replace msn, which was the platform i always used to talk to my family and close friends, i decided to use line. line in my opinion resembles quite a lot of things, besides having super cute stickers and themes !!<br>
+i also decided to try out discord because of friends, who use it a lot.. it remembers me of the oldschool group chats, so i like it.. !<br>
 <br>
-but in spite of having tumblr ( and fb pages ), other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
+but in spite of having some social media accs, other nice places on the internet & the cute line... i was still missing something, my little corner on internet, to be able to make layouts exactly as i imaginate & post every kind of things i want : a personal website !!<br>
 so i did it, and here i am ♡ . * ･ ｡<br>
 the 7 y/o me would be really proud of everything i'm doing right now. this website is really my favorite place on internet !<br>
 it's all i wanted, here i can put together all the projects i do and all the content i like.<br>
@@ -1635,7 +1637,7 @@ never think that you have no hope, that you are dirty or rotten, that your dream
 
 <a name="media" id="media"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what changes have happened in my social media ?</font><br><br><br>
-<font color="#d8b9af">　( june . 01 . 2018 + january . 30 . 2018 )</font>
+<font color="#d8b9af">　( june . 01 . 2018 + january . 30 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
 　　　𝚖𝚊𝚒𝚗 𝚙𝚊𝚐𝚎 𝚊𝚗𝚍 𝚝𝚞𝚖𝚋𝚕𝚛 𝚋𝚕𝚘𝚐 𝚊𝚎𝚜𝚝𝚑𝚎𝚝𝚒𝚌 𝚌𝚑𝚊𝚗𝚐𝚎𝚜 _<br>
@@ -1661,7 +1663,7 @@ this page was made to post my personal stuff + things that inspire me. it was be
 </style>
 　　　𝚒𝚗𝚜𝚝𝚊𝚐𝚛𝚊𝚖 𝚙𝚛𝚘𝚋𝚕𝚎𝚖𝚜 _<br>
 this story is quite complicated and people are always doing theories and posting screenshots about it.. i think it's time to say what really happened to my ig : i used my acc for a short six months ( approximately ), problems began to happen at three months, i couldn't stop following people or following more people, my acc was frozen for about a month like this. i ignored it, but then i could no longer comment, they just vanished. then things started to get really heavy : my pics were erased randomly. sometimes it took a few days, a few hours, sometimes it was instantaneous, it would always disappear. i was already with many followers to that point, i was losing many because my account was becoming a mess. i was upset and contacted the instagram countless times, until one day they said that my account had been hacked. they did nothing about it really so i changed the password several times, but the problem persisted, random comments and pics were erased all the time. i always put the link of my ig on fb pages, so i had many followers, but when i started to suspect the activities i told everyone to stop following me because i would make another account, so i lost a massive number of followers ( i don't know if this was really the cause of the loss of followers because it was really a lot ). i deleted most of the pics, i left only 15 there and i didn't use the acc anymore. i decided not to make another account at all because of the problems and how nobody did anything to help me. the acc is still there until today.<br>
-<b>edit //</b> i decided to clean it completely and stop using.. i made a new spam acc for mutuals. i did it because i was feeling really uncomfortable about all the random people following me and stalking, i want to interact with my friends safely !!<br>
+<b>edit //</b> i decided to clean it completely and stop using.. i made a new acc where i post self care tips and games, mainly for helping mutuals. i did it because i was feeling really uncomfortable about all the random people following me and stalking, i want to interact with my friends safely !!<br>
 <br><br><br><br><br><br>
 </font>
 
