--- a/not-bad.html
+++ b/not-bad.html
@@ -464,13 +464,15 @@ this is a project i started together with a friend who motivated me saying it wo
 this project exists to make people feel happy with a nostalgic, cute and comfy aesthetic ♡ !!<br>
 i try to keep a relaxing and safe environment with positive posts + my aesthetic.<br>
 this project started with facebook pages, where i was reposting content from tumblr. currently, i no longer use facebook and i continue with the project on twitter, where i also frequently repost content from tumblr, with sources.<br>
-besides images, videos and texts with a comfy and cuddly theme, i also like to use my twitter acc to promote art that inspires me and disclose my work !</font>
+besides images, videos and texts with a comfy and cuddly theme, i also like to use my twitter acc to promote art that inspires me and disclose my work !<br>
+i also post some self care tips and games in my instagram acc, with a similar soft aesthetic. i consider it now part of this project too !!</font>
 <br>
 <br><br><br>
 
 <center>
 <sub><sub><img src="https://i.imgur.com/WbqAkc9.gif"/></sub></sub>　<a href="https://twitter.com/sofffti" target="_blank"><font color="#a59881">twitter acc</font></a><br>
-<sub><sub><img src="https://i.imgur.com/NLDjDGc.gif"/></sub></sub>　<a href="https://pufti.my.to" target="_blank"><font color="#a59881">tumblr blog</font></a>
+<sub><sub><img src="https://i.imgur.com/NLDjDGc.gif"/></sub></sub>　<a href="https://pufti.my.to" target="_blank"><font color="#a59881">tumblr blog</font></a><br>
+<sub><sub><img src="https://i.imgur.com/tLmNJIp.gif"/></sub></sub>　<a href="https://www.instagram.com/soffftie" target="_blank"><font color="#a59881">instagram acc</font></a>
 <br>
 <br><br><br>
 </center>
