--- a/fairy-loli.html
+++ b/fairy-loli.html
@@ -457,8 +457,11 @@ function getPosition(el) {
 
 <div style="position:absolute; left:10%; right:10%;">
 <font color="#a8998b"><center><sub><img src="https://i.imgur.com/xgghttq.gif"/></sub>　fairy loli　<sub><img src="https://i.imgur.com/xgghttq.gif"/></sub></center></font>
-<br><br>
+<br>
 <font style="font-size:8px;" color="#b7aa9c">
+<center>!!! i don't use the word "loli" with sexual connotation, so please read <a href="https://middlepot.com/faq#words" target="_blank"><font color="#d1adad">this</font></a> to understand !!!</center>
+<br>
+<br>
 in the kingdom of liberfrólia, you can see cute magical creatures. some of them live forever. age is something mysterious. magic is something simple. small fairies who can't fly, strange-looking anatomy. evil elves, very clever demons. the savvy fairies dominate weapons and magic in a incredible way, they take care of the kingdom and its woods with his wisdom and a sweet tea time every day.<br>
 when humans discovered this world, they looked like friendly creatures. nevertheless, some bad humans tried to use magic for selfish ideals with frightening plans.<br>
 but the little creatures are very smart, they knew that children would be your allies forever as they have a good heart. several human children have been summoned by the queen and became magical creatures, as savvy as the fairies. with the help of the renewed humans, the magic can excel the evil.
